refactory users route and create shagger documentation from users
